--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 
     <!-- * SCRIPT JS -->
 
+    <!-- ? SCRIPT ESTERNI -->
+    <script
+      src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous"
+    ></script>
+
     <!-- ? SCRIPT INTERNI -->
     <script src="js/main.js" type="text/javascript" defer></script>
   </head>
@@ -54,7 +61,11 @@
             placeholder="Inserisci la nuova attività da svolgere"
           />
 
-          <button type="submit" class="my_btn btn-primary btn">
+          <button
+            type="submit"
+            class="my_btn btn-primary btn"
+            data-add-to-todo-list
+          >
             Clicca qui!
           </button>
         </form>
@@ -62,15 +73,9 @@
         <!-- ? CONTENUTO PRINCIPALE DEL TODO -->
 
         <!-- * Lista toDo -->
-        <ul class="px-0 py-3">
-          <li class="d-flex justify-content-between p-2 rounded-1">
-            <div class="my_todo-info">
-              <span class="pe-3">shish</span>
-              <code></code>
-            </div>
-            <i class="fa-solid fa-trash my_icon align-self-center"></i>
-          </li>
-        </ul>
+        <div class="container-fluid">
+          <ul class="px-0 py-3" data-todo-list></ul>
+        </div>
       </main>
     </div>
   </body>
