--- a/index.html
+++ b/index.html
@@ -46,10 +46,39 @@
 
   <body>
     <div id="app">
+      <header>
+        <div class="container-fluid">
+          <div class="row align-items-center py-2">
+            <div class="col-4">
+              <h3 class="fw-bold">Todoolean</h3>
+            </div>
+            <div class="col-4">
+              <div class="my_input-container form-group">
+                <div class="input-group d-flex align-items-center">
+                  <div class="my_input-icon input-group-addon px-3">
+                    <i class="my_icon fa-solid fa-magnifying-glass"></i>
+                  </div>
+                  <input
+                    type="text"
+                    class="my_input form-control d-inline-block"
+                    placeholder="Ricerca attività"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="my_account-section text-end">
+                <i class="my_icon fa-solid fa-plus"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
       <!-- * MAIN -->
       <main class="container-fluid">
         <!-- ? TITLE -->
-        <h1 class="pt-4 fw-bold">Jquery To Do List</h1>
+        <h3 class="pt-4 fw-bold">Oggi</h3>
 
         <!-- ? FORM -->
         <form class="py-2">
