Modified the min-width of the body tag, removed a bootstrap class in the input field in the main and modified the title of the project

--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
           <div class="row align-items-center py-2">
             <div class="col-4">
               <div class="my_logo-container">
-                <h3 class="my_logo fw-bold">Todoolean</h3>
+                <h3 class="my_logo fw-bold">Jquery To Do List</h3>
               </div>
             </div>
+
             <div class="col-4">
               <div class="my_input-container form-group">
                 <div class="input-group d-flex align-items-center">
@@ -71,6 +72,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col-4">
               <div class="my_account-section text-end">
                 <i class="my_icon fa-solid fa-plus"></i>
@@ -92,7 +94,7 @@
               type="text"
               name="toDoInput"
               id="toDoInput"
-              class="my_input form-control d-inline-block mb-3 mb-sm-0 me-sm-3 px-2"
+              class="my_input form-control d-inline-block mb-3 mb-sm-0 px-2"
               placeholder="Inserisci la nuova attività da svolgere"
             />
 
