1) Removed the actions in js linked to the searchbar btn and removed its data attribute; 2) Added some Jquery trim() function in the js code; 3) Added the custom JsDoc  for all the functions used in the main.js file

--- a/index.html
+++ b/index.html
@@ -58,16 +58,14 @@
             <div class="col-4">
               <div class="my_input-container form-group">
                 <div class="input-group d-flex align-items-center">
-                  <div
-                    class="my_input-icon input-group-addon px-3"
-                    data-search-bar
-                  >
+                  <div class="my_input-icon input-group-addon px-3">
                     <i class="my_icon fa-solid fa-magnifying-glass"></i>
                   </div>
                   <input
                     type="text"
                     class="my_input form-control d-inline-block"
                     placeholder="Ricerca attività"
+                    data-search-bar
                   />
                 </div>
               </div>
